--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./services.html">Services</a>
+                <div class="dropdown">
+                  <button>services <img src="./img/icons8_expand_arrow_60px.png"/></button>
+                  <div class="dropdown-content">
+                  <a href="./grc.html">Governance Risk compliance (GRC)</a>
+                  <a href="./IT.html">Information Technology</a>
+                  <a href="mrm.html">Model Risk Management & Quants</a>
+                  <a href="aas.html">Audit & Assessment Support</a>
+                  <a href="agiless.html">Agile support services</a>
+                  <a href="#">Banking & Capital Markets</a>
+                  </div>
+                </div>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./About.html">About</a>
@@ -74,7 +84,7 @@
           <div class="container" id="value-proposition">
             <p>
               Hiring is very demanding  and taxing on our clients. It is also expensive
-               and time-consuming and could distract from care business focus. SCFF moved
+               and time-consuming and could distract from core business focus. SCFF moved
                 in to fill this gap by becoming a trusted advisor and partner to the client’s
                  organization and the industry leaders we support.
               <br/><br/>
@@ -224,7 +234,7 @@
                     </div>
                     <!--Grid row-->
                     <div class=" text-md-left ">
-                        <button class="btn btn-primary submit-button" type="submit">Submit</button>
+                      <button class="btn btn-primary submit-button" type="submit">Submit</button>
                     </div>
                 </form>
             </div>
